--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="header">  
         <span>凡人修仙传</span>
-        <audio id="form" autoplay="autoplay" controls="controls" src="http://180e.ysts8.com:8000/%E7%8E%84%E5%B9%BB%E5%B0%8F%E8%AF%B4/2009/%E5%87%A1%E4%BA%BA%E4%BF%AE%E4%BB%99%E4%BC%A0/%E5%87%A1%E4%BA%BA%E4%BF%AE%E4%BB%99%E4%BC%A0129.mp3"></audio>
+        <audio id="form" autoplay="autoplay" controls="controls" src="http://180e.ysts8.com:8000/%E7%8E%84%E5%B9%BB%E5%B0%8F%E8%AF%B4/2009/%E5%87%A1%E4%BA%BA%E4%BF%AE%E4%BB%99%E4%BC%A0/%E5%87%A1%E4%BA%BA%E4%BF%AE%E4%BB%99%E4%BC%A0129.mp3?1403345140028x1543399828x1403351270688-cf6217cd38a680c2980c6f47ed3226af?4"></audio>
          
             <button class="last" onclick="last()">上一集</button>
             <input  class="input_num" type="text" id="idnum">
