--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             
             <div class="inputcenter">
                 <button class="last" onclick="last()">上一集</button>
-                <input  class="input_num" type="text" id="idnum">
+                <input  class="input_num" type="text" id="idnum" placeholder="请输入要跳转的集数">
                 <button class="next" onclick="next()">下一集</button> 
             </div>
             
